--- a/Dataset_analysis.ipynb
+++ b/Dataset_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 51,
    "id": "a1275e80",
    "metadata": {},
    "outputs": [
@@ -23,12 +23,14 @@
     "import easydict\n",
     "import torch\n",
     "\n",
-    "from utils.dataset_tools import maybe_unzip_dataset"
+    "from data import MetaLearningSystemDataLoader\n",
+    "from data import FewShotLearningDatasetParallel\n",
+    "from utils.parser_utils import get_args"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 52,
    "id": "f7352263",
    "metadata": {},
    "outputs": [],
@@ -100,12 +102,16 @@
     "im_shape = (2, 3, args.image_height, args.image_width)\n",
     "\n",
     "args.use_cuda = torch.cuda.is_available()\n",
-    "args.seed = 104"
+    "args.seed = 104\n",
+    "args.reverse_channels=False\n",
+    "args.labels_as_int=False\n",
+    "args.reset_stored_filepaths=False\n",
+    "args.num_of_gpus=1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 53,
    "id": "c10b5ca9",
    "metadata": {},
    "outputs": [
@@ -113,18 +119,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mini_imagenet_full_size\n",
-      "Not found dataset folder structure.. searching for .tar.bz2 file\n",
-      "zip_directory ==  C:\\Users\\JM\\PycharmProjects\\MAML\\datasets\\mini_imagenet_full_size.tar.bz2\n",
-      "Found zip file, unpacking\n",
-      "count stuff________________________________________ 0\n",
-      "using new dataset\n"
+      "data_length ==  {'test': 12000, 'train': 38400, 'val': 9600}\n"
      ]
     }
    ],
    "source": [
-    "maybe_unzip_dataset(args=args)"
+    "dataset = FewShotLearningDatasetParallel(args=args)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "70edfa58",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'method' object is not subscriptable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_29832\\3033800514.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdataset\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_data_paths\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: 'method' object is not subscriptable"
+     ]
+    }
+   ],
+   "source": []
   }
  ],
  "metadata": {
