--- a/Dataset_analysis.ipynb
+++ b/Dataset_analysis.ipynb
@@ -2,15 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "a1275e80",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
-    "#!pip install easydict\n",
+    "# pip install easydict\n",
     "import easydict\n",
     "import torch\n",
     "\n",
@@ -21,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "f7352263",
    "metadata": {},
    "outputs": [],
@@ -102,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "70edfa58",
    "metadata": {},
    "outputs": [],
@@ -135,7 +144,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.16"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
