Curriculum learning 추가

--- a/Dataset_analysis.ipynb
+++ b/Dataset_analysis.ipynb
@@ -16,7 +16,11 @@
     "\n",
     "from data import MetaLearningSystemDataLoader\n",
     "from data import FewShotLearningDatasetParallel\n",
-    "from utils.parser_utils import get_args"
+    "from utils.parser_utils import get_args\n",
+    "\n",
+    "\n",
+    "from meta_neural_network_architectures import VGGReLUNormNetwork, ResNet12, extract_top_level_dict, MetaBatchNormLayer, MetaLinearLayer\n",
+    "from inner_loop_optimizers import LSLRGradientDescentLearningRule"
    ]
   },
   {
@@ -112,24 +116,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "252d6b7d",
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "type object 'MetaLearningSystemDataLoader' has no attribute 'dataset'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_21800\\1454979319.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdata\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdataset\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m: type object 'MetaLearningSystemDataLoader' has no attribute 'dataset'"
+     "data": {
+      "text/plain": [
+       "MetaLinearLayer()"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "input_dim = 3\n",
+    "input_shape = (1, input_dim)\n",
+    "\n",
+    "linear = MetaLinearLayer(input_shape=input_shape, num_filters=input_dim, use_bias=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "2b9896cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "weights torch.Size([3, 3])\n",
+      "bias torch.Size([3])\n"
      ]
     }
    ],
    "source": [
-    "data.dataset"
+    "for name, param in linear.named_parameters():\n",
+    "    print(name, param.shape)"
    ]
   }
  ],
