--- a/Model_Analysis.ipynb
+++ b/Model_Analysis.ipynb
@@ -33,10 +33,7 @@
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
-    "import torch.optim as optim\n",
-    "\n",
-    "from meta_neural_network_architectures import VGGReLUNormNetwork, ResNet12, extract_top_level_dict, MetaBatchNormLayer, MetaLinearLayer\n",
-    "from inner_loop_optimizers import LSLRGradientDescentLearningRule"
+    "import torch.optim as optim"
    ]
   },
   {
