--- a/Dataset_analysis.ipynb
+++ b/Dataset_analysis.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 189,
    "id": "a1275e80",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -13,6 +22,8 @@
     "# pip install easydict\n",
     "import easydict\n",
     "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
     "\n",
     "from data import MetaLearningSystemDataLoader\n",
     "from data import FewShotLearningDatasetParallel\n",
@@ -25,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 190,
    "id": "f7352263",
    "metadata": {},
    "outputs": [],
@@ -106,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 191,
    "id": "70edfa58",
    "metadata": {},
    "outputs": [],
@@ -116,31 +127,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 192,
    "id": "252d6b7d",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "MetaLinearLayer()"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "input_dim = 3\n",
+    "input_dim = 10\n",
     "input_shape = (1, input_dim)\n",
     "\n",
-    "linear = MetaLinearLayer(input_shape=input_shape, num_filters=input_dim, use_bias=True)\n"
+    "meta_linear = MetaLinearLayer(input_shape=input_shape, num_filters=input_dim, use_bias=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 193,
    "id": "2b9896cd",
    "metadata": {},
    "outputs": [
@@ -148,15 +148,220 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "weights torch.Size([3, 3])\n",
-      "bias torch.Size([3])\n"
+      "weights torch.Size([10, 10])\n",
+      "bias torch.Size([10])\n"
      ]
     }
    ],
    "source": [
-    "for name, param in linear.named_parameters():\n",
+    "for name, param in meta_linear.named_parameters():\n",
     "    print(name, param.shape)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 194,
+   "id": "10ce21f6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a len ==  3\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor([ 1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12])"
+      ]
+     },
+     "execution_count": 194,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x1 = torch.tensor([1, 2, 3, 4])\n",
+    "x2 = torch.tensor([5, 6, 7, 8])\n",
+    "x3 = torch.tensor([9, 10, 11 ,12])\n",
+    "\n",
+    "a = []\n",
+    "a.append(x1)\n",
+    "a.append(x2)\n",
+    "a.append(x3)\n",
+    "\n",
+    "print(\"a len == \",len(a))\n",
+    "\n",
+    "# inputs = torch.stack(a)\n",
+    "inputs = torch.cat(a)\n",
+    "inputs\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 195,
+   "id": "64ac23cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Parameter containing:\n",
+       "tensor([[-0.3419, -0.1161, -0.0592,  0.5328, -0.5382,  0.0276, -0.4067,  0.1050,\n",
+       "          0.2646,  0.1206],\n",
+       "        [-0.2462, -0.5362, -0.1066,  0.0017, -0.4400, -0.1472, -0.3142,  0.1492,\n",
+       "         -0.1956, -0.1493],\n",
+       "        [ 0.3184,  0.4922,  0.1096, -0.3266,  0.3313,  0.3086, -0.4515, -0.0245,\n",
+       "          0.3348,  0.2542],\n",
+       "        [-0.1074, -0.4810, -0.0694,  0.1268, -0.0351, -0.3420,  0.3856, -0.0643,\n",
+       "         -0.4052, -0.1178],\n",
+       "        [ 0.2284, -0.2137, -0.4187, -0.1576, -0.3951, -0.2103,  0.0924, -0.0915,\n",
+       "          0.1532,  0.4606],\n",
+       "        [-0.0051,  0.1155,  0.2027,  0.4556,  0.3564, -0.1232, -0.3023, -0.2142,\n",
+       "          0.4530, -0.0949],\n",
+       "        [-0.0444, -0.0790,  0.2115,  0.3245,  0.2490, -0.5222,  0.3717, -0.5193,\n",
+       "         -0.1560,  0.3584],\n",
+       "        [ 0.3703,  0.4295,  0.0900,  0.5290,  0.2163,  0.1366,  0.0608,  0.1772,\n",
+       "          0.0112,  0.2723],\n",
+       "        [-0.0563,  0.3309, -0.3247,  0.2516, -0.5091, -0.4323,  0.5211,  0.4224,\n",
+       "         -0.2842, -0.1994],\n",
+       "        [-0.2203,  0.2493,  0.1340, -0.5363,  0.4110,  0.2084,  0.2093,  0.3960,\n",
+       "          0.3633, -0.4192]], requires_grad=True)"
+      ]
+     },
+     "execution_count": 195,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "input_dim = 10\n",
+    "input_shape = (1, input_dim)\n",
+    "num_filters=input_dim\n",
+    "b, c = input_shape #c=10\n",
+    "\n",
+    "weights1 = nn.Parameter(torch.ones(num_filters, c))\n",
+    "# weight = nn.Parameter(torch.FloatTensor(out_features, in_features))\n",
+    "\n",
+    "nn.init.xavier_uniform_(weights1)\n",
+    "#weights"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 196,
+   "id": "b29e8c16",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Parameter containing:\n",
+       "tensor([0., 0., 0., 0., 0., 0., 0., 0., 0., 0.], requires_grad=True)"
+      ]
+     },
+     "execution_count": 196,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bias1 = nn.Parameter(torch.zeros(num_filters))\n",
+    "bias1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 197,
+   "id": "2f8288d8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 0.0186, -1.0784,  0.9117, -0.8201, -0.1632,  0.7538,  0.0961,  1.0518,\n",
+       "         -0.3233,  0.3555],\n",
+       "        [-0.5200, -0.6977,  0.6746, -0.4093, -0.4079,  0.0644, -0.1693,  0.7819,\n",
+       "         -0.5199,  0.5876],\n",
+       "        [-0.3547, -1.0406,  0.8629, -0.5238, -0.0830,  0.4208,  0.5054,  1.1539,\n",
+       "         -0.2066,  0.0055]], grad_fn=<AddmmBackward0>)"
+      ]
+     },
+     "execution_count": 197,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = torch.rand(3, 10)\n",
+    "\n",
+    "out1 = F.linear(input=x, weight=weights1, bias=bias1)\n",
+    "# y = xW^T + b\n",
+    "\n",
+    "out1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 198,
+   "id": "d3adb0cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.6955, 1.9939],\n",
+       "        [0.2063, 1.4041],\n",
+       "        [0.4751, 1.7669]], grad_fn=<MmBackward0>)"
+      ]
+     },
+     "execution_count": 198,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "weights2 = nn.Parameter(torch.ones(2, 10))\n",
+    "nn.init.xavier_uniform_(weights2)\n",
+    "out2 = F.linear(input=out1, weight=weights2)\n",
+    "# y = x*W^T + b\n",
+    "\n",
+    "out2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 199,
+   "id": "42d4a1fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.6955, 1.9939],\n",
+       "        [0.2063, 1.4041],\n",
+       "        [0.4751, 1.7669]], grad_fn=<ReluBackward0>)"
+      ]
+     },
+     "execution_count": 199,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "out3 = F.relu_(out2)\n",
+    "out3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b639864e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
