--- a/VGGReLUNormNetwork_analysis.ipynb
+++ b/VGGReLUNormNetwork_analysis.ipynb
@@ -2,19 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "id": "8c29a4e9",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -22,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "id": "7b28dfb0",
    "metadata": {},
    "outputs": [],
@@ -42,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "id": "79927d40",
    "metadata": {},
    "outputs": [],
@@ -123,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "id": "c5efae59",
    "metadata": {},
    "outputs": [
@@ -214,6 +205,60 @@
     "# (layer_dict): ModuleDict()\n",
     "# 코드가 동작하는데 전혀 필요없는 부분으로 보여짐. 이것 때문에 헷갈려하지말자"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "b04c4062",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "연산 전 torch.Size([10, 1, 20, 20])\n",
+      "conv1 연산 후 torch.Size([10, 3, 16, 16])\n",
+      "conv2 연산 후 torch.Size([10, 10, 12, 12])\n",
+      "차원 감소 후 torch.Size([10, 1440])\n",
+      "fc1 연산 후 torch.Size([10, 50])\n",
+      "fc2 연산 후 torch.Size([10, 10])\n"
+     ]
+    }
+   ],
+   "source": [
+    "class CNN(nn.Module):\n",
+    "  def __init__(self):\n",
+    "    super(CNN, self).__init__()\n",
+    "    self.conv1 = nn.Conv2d(in_channels=1, out_channels=3, kernel_size=5, stride=1)\n",
+    "    self.conv2 = nn.Conv2d(in_channels=3, out_channels=10, kernel_size=5, stride=1)\n",
+    "    self.fc1 = nn.Linear(10 * 12 * 12, 50)\n",
+    "    self.fc2 = nn.Linear(50, 10)\n",
+    "  \n",
+    "  def forward(self, x):\n",
+    "    print(\"연산 전\", x.size())\n",
+    "    x = F.relu(self.conv1(x))\n",
+    "    print(\"conv1 연산 후\", x.size())\n",
+    "    x = F.relu(self.conv2(x))\n",
+    "    print(\"conv2 연산 후\",x.size())\n",
+    "    x = x.view(-1, 10 * 12 * 12)\n",
+    "    print(\"차원 감소 후\", x.size())\n",
+    "    x = F.relu(self.fc1(x))\n",
+    "    print(\"fc1 연산 후\", x.size())\n",
+    "    x = self.fc2(x)\n",
+    "    print(\"fc2 연산 후\", x.size())\n",
+    "    return x\n",
+    "\n",
+    "cnn = CNN()\n",
+    "output = cnn(torch.randn(10, 1, 20, 20))  # Input Size: (10, 1, 20, 20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c017bc6f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
