--- a/VGGReLUNormNetwork_analysis.ipynb
+++ b/VGGReLUNormNetwork_analysis.ipynb
@@ -208,7 +208,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
+   "id": "c017bc6f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ModuleDict(\n",
+       "  (conv0): MetaConvNormLayerReLU(\n",
+       "    (layer_dict): ModuleDict()\n",
+       "    (conv): MetaConv2dLayer()\n",
+       "    (norm_layer): MetaBatchNormLayer(48, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "  )\n",
+       "  (conv1): MetaConvNormLayerReLU(\n",
+       "    (layer_dict): ModuleDict()\n",
+       "    (conv): MetaConv2dLayer()\n",
+       "    (norm_layer): MetaBatchNormLayer(48, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "  )\n",
+       "  (conv2): MetaConvNormLayerReLU(\n",
+       "    (layer_dict): ModuleDict()\n",
+       "    (conv): MetaConv2dLayer()\n",
+       "    (norm_layer): MetaBatchNormLayer(48, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "  )\n",
+       "  (conv3): MetaConvNormLayerReLU(\n",
+       "    (layer_dict): ModuleDict()\n",
+       "    (conv): MetaConv2dLayer()\n",
+       "    (norm_layer): MetaBatchNormLayer(48, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "  )\n",
+       "  (linear): MetaLinearLayer()\n",
+       ")"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "classifier.layer_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "id": "b04c4062",
    "metadata": {},
    "outputs": [
@@ -230,16 +273,28 @@
     "  def __init__(self):\n",
     "    super(CNN, self).__init__()\n",
     "    self.conv1 = nn.Conv2d(in_channels=1, out_channels=3, kernel_size=5, stride=1)\n",
+    "    \n",
+    "    self.dropout1 = nn.Dropout(0.5)\n",
+    "    \n",
     "    self.conv2 = nn.Conv2d(in_channels=3, out_channels=10, kernel_size=5, stride=1)\n",
+    "    \n",
+    "    self.dropout2 = nn.Dropout(0.5)\n",
+    "    \n",
     "    self.fc1 = nn.Linear(10 * 12 * 12, 50)\n",
     "    self.fc2 = nn.Linear(50, 10)\n",
     "  \n",
     "  def forward(self, x):\n",
     "    print(\"연산 전\", x.size())\n",
-    "    x = F.relu(self.conv1(x))\n",
+    "    \n",
+    "    x = self.conv1(x)    \n",
     "    print(\"conv1 연산 후\", x.size())\n",
-    "    x = F.relu(self.conv2(x))\n",
+    "    \n",
+    "    x = self.dropout1(x)\n",
+    "    \n",
+    "    x = self.conv2(x)\n",
     "    print(\"conv2 연산 후\",x.size())\n",
+    "    x = self.dropout2(x)\n",
+    "    \n",
     "    x = x.view(-1, 10 * 12 * 12)\n",
     "    print(\"차원 감소 후\", x.size())\n",
     "    x = F.relu(self.fc1(x))\n",
@@ -255,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c017bc6f",
+   "id": "1d25341c",
    "metadata": {},
    "outputs": [],
    "source": []
