--- a/AngularMargin_jupyternotebook/test.ipynb
+++ b/AngularMargin_jupyternotebook/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "id": "56a475fd",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "9001075c",
    "metadata": {},
    "outputs": [
@@ -22,7 +22,9 @@
      "output_type": "stream",
      "text": [
       "cos_m ==  0.8775825618903728\n",
-      "math.pi ==  3.141592653589793\n"
+      "math.pi ==  3.141592653589793\n",
+      "th ==  -0.8775825618903726\n",
+      "mm ==  0.23971276930210156\n"
      ]
     }
    ],
@@ -38,12 +40,19 @@
     "\n",
     "sin_m = math.sin(m)\n",
     "th = math.cos(math.pi - m)\n",
-    "mm = math.sin(math.pi - m) * m"
+    "mm = math.sin(math.pi - m) * m\n",
+    "\n",
+    "\n",
+    "print(\"th == \", th)\n",
+    "print(\"mm == \", mm)\n",
+    "\n",
+    "\n",
+    "#math.cos(math.pi)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "id": "1a92aaa9",
    "metadata": {},
    "outputs": [
@@ -77,7 +86,7 @@
        "        [0.3407]])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "id": "7f7bf734",
    "metadata": {},
    "outputs": [
@@ -157,7 +166,7 @@
        "        [0.9402]])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "id": "322802a0",
    "metadata": {},
    "outputs": [
@@ -204,7 +213,7 @@
        "        [-0.1518]])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "id": "0fd43ad2",
    "metadata": {},
    "outputs": [
@@ -250,7 +259,7 @@
        "        [-0.1518]])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "id": "54c2f8d7",
    "metadata": {},
    "outputs": [
@@ -296,7 +305,7 @@
        "        [-0.0697,  0.0153, -0.0366, -0.2728, -0.1518]])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "id": "b4c4de32",
    "metadata": {},
    "outputs": [
@@ -341,7 +350,7 @@
        "        [ -4.4608,   0.9792,  -2.3424, -17.4592,  -9.7120]])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "id": "fa2375ff",
    "metadata": {},
    "outputs": [
@@ -387,7 +396,7 @@
        "        [ -4.4608,   0.9792,  -2.3424, -17.4592,  21.8048]])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -413,7 +422,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.16"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
