--- a/OLE_jupyternotebook/check_gradient.ipynb
+++ b/OLE_jupyternotebook/check_gradient.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 2,
    "id": "3d4115e5",
    "metadata": {},
    "outputs": [
@@ -20,14 +20,14 @@
      "output_type": "stream",
      "text": [
       "Cross Entropy Loss Gradient:\n",
-      "tensor([[ 0.1462, -0.1110],\n",
-      "        [-0.1462,  0.1110]])\n",
-      "tensor([ 0.0093, -0.0093])\n",
+      "tensor([[ 0.1484,  0.1180],\n",
+      "        [-0.1484, -0.1180]])\n",
+      "tensor([-0.0539,  0.0539])\n",
       "\n",
       "KL Divergence Loss Gradient:\n",
-      "tensor([[ 0.1462, -0.1110],\n",
-      "        [-0.1462,  0.1110]])\n",
-      "tensor([ 0.0093, -0.0093])\n"
+      "tensor([[ 0.1484,  0.1180],\n",
+      "        [-0.1484, -0.1180]])\n",
+      "tensor([-0.0539,  0.0539])\n"
      ]
     }
    ],
@@ -67,8 +67,8 @@
     "kl_loss = ce_loss\n",
     "\n",
     "# Gradient 계산 (torch.autograd.grad 사용)\n",
-    "ce_gradient = grad(ce_loss, model.parameters(), retain_graph=True)\n",
-    "kl_gradient = grad(kl_loss, model.parameters(), retain_graph=True)\n",
+    "ce_gradient = torch.autograd.grad(ce_loss, model.parameters(), retain_graph=True)\n",
+    "kl_gradient = torch.autograd.grad(kl_loss, model.parameters(), retain_graph=True)\n",
     "\n",
     "# Gradient 확인\n",
     "print(\"Cross Entropy Loss Gradient:\")\n",
@@ -82,17 +82,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 3,
    "id": "6dd2a023",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor(0.7601, grad_fn=<NllLossBackward>)"
+       "tensor(0.7474, grad_fn=<NllLossBackward>)"
       ]
      },
-     "execution_count": 182,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,17 +103,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 4,
    "id": "3bb44854",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor(0.7601, grad_fn=<NllLossBackward>)"
+       "tensor(0.7474, grad_fn=<NllLossBackward>)"
       ]
      },
-     "execution_count": 183,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,17 +124,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 5,
    "id": "5698603e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor(2.2804, grad_fn=<AddBackward0>)"
+       "tensor(2.2421, grad_fn=<AddBackward0>)"
       ]
      },
-     "execution_count": 184,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,19 +146,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 6,
    "id": "b0e53d7c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(tensor([[ 0.4385, -0.3331],\n",
-       "         [-0.4385,  0.3331]]),\n",
-       " tensor([ 0.0278, -0.0278]))"
+       "(tensor([[ 0.4451,  0.3539],\n",
+       "         [-0.4451, -0.3539]]),\n",
+       " tensor([-0.1616,  0.1616]))"
       ]
      },
-     "execution_count": 185,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 7,
    "id": "77c1fe23",
    "metadata": {},
    "outputs": [
@@ -186,9 +186,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[ 0.1462, -0.1110],\n",
-      "        [-0.1462,  0.1110]])\n",
-      "tensor([ 0.0093, -0.0093])\n"
+      "tensor([[ 0.1484,  0.1180],\n",
+      "        [-0.1484, -0.1180]])\n",
+      "tensor([-0.0539,  0.0539])\n"
      ]
     }
    ],
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 8,
    "id": "3bdede2c",
    "metadata": {},
    "outputs": [
@@ -217,15 +217,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[ 0.1462, -0.1110],\n",
-      "        [-0.1462,  0.1110]])\n",
-      "tensor([ 0.0093, -0.0093])\n",
-      "tensor([[ 0.1462, -0.1110],\n",
-      "        [-0.1462,  0.1110]])\n",
-      "tensor([ 0.0093, -0.0093])\n",
-      "tensor([[ 0.1462, -0.1110],\n",
-      "        [-0.1462,  0.1110]])\n",
-      "tensor([ 0.0093, -0.0093])\n"
+      "tensor([[ 0.1484,  0.1180],\n",
+      "        [-0.1484, -0.1180]])\n",
+      "tensor([-0.0539,  0.0539])\n",
+      "tensor([[ 0.1484,  0.1180],\n",
+      "        [-0.1484, -0.1180]])\n",
+      "tensor([-0.0539,  0.0539])\n",
+      "tensor([[ 0.1484,  0.1180],\n",
+      "        [-0.1484, -0.1180]])\n",
+      "tensor([-0.0539,  0.0539])\n"
      ]
     }
    ],
@@ -245,28 +245,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 9,
    "id": "31ef3c09",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(tensor([[ 0.1462, -0.1110],\n",
-       "         [-0.1462,  0.1110]]),\n",
-       " tensor([ 0.0093, -0.0093]),\n",
-       " tensor([[ 0.1462, -0.1110],\n",
-       "         [-0.1462,  0.1110]]),\n",
-       " tensor([ 0.0093, -0.0093]),\n",
-       " tensor([[ 0.1462, -0.1110],\n",
-       "         [-0.1462,  0.1110]]),\n",
-       " tensor([ 0.0093, -0.0093]),\n",
-       " tensor([[ 0.1462, -0.1110],\n",
-       "         [-0.1462,  0.1110]]),\n",
-       " tensor([ 0.0093, -0.0093]))"
+       "(tensor([[ 0.1484,  0.1180],\n",
+       "         [-0.1484, -0.1180]]),\n",
+       " tensor([-0.0539,  0.0539]),\n",
+       " tensor([[ 0.1484,  0.1180],\n",
+       "         [-0.1484, -0.1180]]),\n",
+       " tensor([-0.0539,  0.0539]),\n",
+       " tensor([[ 0.1484,  0.1180],\n",
+       "         [-0.1484, -0.1180]]),\n",
+       " tensor([-0.0539,  0.0539]),\n",
+       " tensor([[ 0.1484,  0.1180],\n",
+       "         [-0.1484, -0.1180]]),\n",
+       " tensor([-0.0539,  0.0539]))"
       ]
      },
-     "execution_count": 188,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 10,
    "id": "a85ef497",
    "metadata": {},
    "outputs": [
@@ -294,9 +294,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[ 0.4385, -0.3331],\n",
-      "        [-0.4385,  0.3331]])\n",
-      "tensor([ 0.0278, -0.0278])\n"
+      "tensor([[ 0.4451,  0.3539],\n",
+      "        [-0.4451, -0.3539]])\n",
+      "tensor([-0.1616,  0.1616])\n"
      ]
     }
    ],
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 11,
    "id": "5dab046a",
    "metadata": {},
    "outputs": [
@@ -325,9 +325,9 @@
      "output_type": "stream",
      "text": [
       "Cross Entropy Loss Gradient:\n",
-      "tensor([[ 0.4385, -0.3331],\n",
-      "        [-0.4385,  0.3331]])\n",
-      "tensor([ 0.0278, -0.0278])\n"
+      "tensor([[ 0.4451,  0.3539],\n",
+      "        [-0.4451, -0.3539]])\n",
+      "tensor([-0.1616,  0.1616])\n"
      ]
     }
    ],
@@ -337,6 +337,28 @@
     "ce_gradient = torch.autograd.grad(ce_loss, model.parameters(), retain_graph=True)\n",
     "for grad_param in ce_gradient:\n",
     "    print(torch.tensor(3) * grad_param)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "42595cdd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 0.1484,  0.1180],\n",
+       "        [-0.1484, -0.1180]])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ce_gradient[0]"
    ]
   }
  ],
